--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,7 +5,10 @@ name: Go
 
 on:
   push:
-    branches: ["master"]
+    branches:
+      - "master"
+    tags:
+      - "v*"
   pull_request:
     branches: ["master"]
 
@@ -20,8 +23,28 @@ jobs:
         with:
           go-version: "1.23"
 
+      - name: install arm toolchain
+        run: |
+          sudo apt update
+          sudo apt install gcc-10-arm-linux-gnueabihf
+
       - name: Build
-        run: go build -v ./...
+        env:
+          CC: arm-linux-gnueabihf-gcc-10
+          CGO_ENABLED: 1
+          GOOS: linux
+          GOARCH: arm
+        run: |
+          mkdir dist
+          for v in http ws; do
+            go build -o dist/doorbot2-$v ./cmd/$v
+          done
 
       - name: Test
         run: go test -v -cover ./...
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: dist/doorbot2-*
