--- a/init/doorbot2.service
+++ b/init/doorbot2.service
@@ -6,7 +6,7 @@ After = network.target
 Type = simple
 WorkingDirectory = /opt/doorbot2
 EnvironmentFile = /opt/doorbot2/.env
-ExecStart = /opt/doorbot2/doorbot2 start --secure=false --addr :8080
+ExecStart = /opt/doorbot2/doorbot2 start --secure=false --httpAddr :8080
 Restart = always
 
 [Install]
