Skip arm7 platform

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,10 +34,7 @@ jobs:
         run: make test
 
       - name: Build
-        run: |
-          sudo apt update
-          sudo apt install gcc-10-arm-linux-gnueabihf
-          make build-all
+        run: make build-all
 
       - name: Release
         uses: softprops/action-gh-release@v2
