--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,6 +21,7 @@ jobs:
           - "3306:3306"
         env:
           MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: "true"
+        options: --health-cmd "healthcheck.sh --connect --innodb_initialized"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
